bo-archival/force-app/main/default/objects/Archival_Process__c/Archival_Process__c.object-meta.xml
<CustomObject>
    <description>Custom object to store record of Archival Process run</description>
    <label>Archival Process</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Process Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archival Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>