bo-archival/force-app/main/default/objects/Archival_Process__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <description>Number of Records Archived</description>
    <inlineHelpText>Number of Records Archived</inlineHelpText>
    <label>Archived Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>