bo-archival/force-app/main/default/objects/Archival_Process__c/fields/Archived_Till__c.field-meta.xml
<CustomField>
    <fullName>Archived_Till__c</fullName>
    <label>Archived Till</label>
    <required>true</required>
    <type>Date</type>
</CustomField>