bo-archival/force-app/main/default/objects/Archival_Process__c/fields/Delete_Records__c.field-meta.xml
<CustomField>
    <fullName>Delete_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Records</label>
    <type>Checkbox</type>
</CustomField>