bo-archival/force-app/main/default/objects/Archival_Process__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <label>Deleted Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>