bo-archival/force-app/main/default/objects/Archival_Process__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Number of Records Failed</description>
    <inlineHelpText>Number of Records Failed</inlineHelpText>
    <label>Error Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>