bo-archival/force-app/main/default/objects/Archival_Process__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <label>Selected Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>