bo-archival/force-app/main/default/objects/Archival_Process__c/fields/Time_Taken_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken_Minutes__c</fullName>
    <formula>(TIMEVALUE( End_Time__c ) - TIMEVALUE(Start_Time__c ))/60000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Taken (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>