bo-archival/force-app/main/default/objects/Archival_Process__c/fields/Time_Taken_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken_Seconds__c</fullName>
    <formula>(TIMEVALUE( End_Time__c ) -  TIMEVALUE(Start_Time__c ))/1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Taken (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>