bo-archival/force-app/main/default/objects/Archival_Process__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <label>Updated Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>