bo-archival/force-app/main/default/objects/Archival_Process__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Object__c</columns>
    <columns>Archived_Till__c</columns>
    <columns>Delete_Records__c</columns>
    <columns>Status__c</columns>
    <columns>Time_Taken_Seconds__c</columns>
    <columns>Archived__c</columns>
    <columns>Deleted__c</columns>
    <columns>Updated__c</columns>
    <columns>Error__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>